fixes for overlapping with long names

--- a/waitlist/static/css/waitlist.css
+++ b/waitlist/static/css/waitlist.css
@@ -1,5 +1,5 @@
 .wel-header-32 {
-	height: 32px;
+	min-height: 32px;
 }
 .wel-img-32 {
 	float: left;
@@ -8,7 +8,6 @@
 }
 .wel-container-32 {
 	margin-left: 35px;
-	height: 32px;
 }
 .wel-text-row-32-2 {
 	height: 50%;
